--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -87,4 +87,4 @@ war.content.additional=
 war.ear.name=${war.name}
 war.name=swp-online-shop.war
 web.docbase.dir=web
-webinf.dir=web/WEB-INF
+webinf.dir=web/META-INF
